--- a/Bears_ConnectFour/Bears_ConnectFour.csproj
+++ b/Bears_ConnectFour/Bears_ConnectFour.csproj
@@ -42,8 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\Controller.cs" />
+    <Compile Include="Model\Board.cs" />
+    <Compile Include="Model\Piece.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\ConsoleView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
