--- a/Bears_ConnectFour/Bears_ConnectFour.csproj
+++ b/Bears_ConnectFour/Bears_ConnectFour.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Controller\Controller.cs" />
     <Compile Include="Model\Board.cs" />
+    <Compile Include="Model\Config.cs" />
     <Compile Include="Model\Piece.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
