--- a/Bears_ConnectFour/Bears_ConnectFour.csproj
+++ b/Bears_ConnectFour/Bears_ConnectFour.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Diagram.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
