--- a/Bears_ConnectFour/Bears_ConnectFour.csproj
+++ b/Bears_ConnectFour/Bears_ConnectFour.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Model\Piece.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities\ConsoleUtil.cs" />
+    <Compile Include="View\ConsoleConfig.cs" />
     <Compile Include="View\ConsoleView.cs" />
   </ItemGroup>
   <ItemGroup>
