--- a/Bears_ConnectFour/Bears_ConnectFour.csproj
+++ b/Bears_ConnectFour/Bears_ConnectFour.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Controller\Controller.cs" />
     <Compile Include="Model\Board.cs" />
     <Compile Include="Model\Config.cs" />
+    <Compile Include="Model\Enums.cs" />
     <Compile Include="Model\Piece.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
