Added stats screen

--- a/Bears_ConnectFour/Bears_ConnectFour.csproj
+++ b/Bears_ConnectFour/Bears_ConnectFour.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Model\Config.cs" />
     <Compile Include="Model\Enums.cs" />
     <Compile Include="Model\Piece.cs" />
+    <Compile Include="Model\Stats.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\ConsoleUtil.cs" />
